--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,11 @@
 
 <div class="container main-container">
     <h1>Firechat</h1>
+
+    <app-login></app-login>
+    <!--     
     <div class="chat-window">
         <app-chat></app-chat>
-    </div>
+    </div> -->
 
 </div>
