--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,14 @@
 <div class="container main-container">
     <h1>Firechat</h1>
 
-    <app-login></app-login>
-    <!--     
-    <div class="chat-window">
+    <div class="col-md-12 text-right" *ngIf="chatService.usuario.uid">
+        <button (click)="chatService.logout()" type="button" class="btn btn-outline-danger">Salir</button>
+
+    </div>
+    <app-login *ngIf="!chatService.usuario.uid"></app-login>
+
+    <div *ngIf="chatService.usuario.uid" class="chat-window">
         <app-chat></app-chat>
-    </div> -->
+    </div>
 
 </div>
