--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -2,8 +2,8 @@
 <hr>
 <div class="app-mensajes" id="app-mensajes">
 
-    <div class="text-right" *ngFor="let chat of _cs.chats">
-        <span class="badge badge-primary">Fernando</span>
+    <div class="text-right" *ngFor="let chat of _cs.chats" [ngClass]="{ 'text-right': _cs.usuario.uid === chat.uid}">
+        <span class="badge" [ngClass]="{ 'badge-primary': _cs.usuario.uid === chat.uid, 'badge-success': _cs.usuario.uid !== chat.uid  }">{{chat.nombre}}</span>
         <p>{{chat.mensaje}}</p>
     </div>
 
